--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AmazonClone</title>
+    <title>Ecommerce Gadget Guru</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
@@ -77,44 +77,44 @@
 <div class="shop-section">
     <div class="box1 box">
         <div class="box-content">
-        <h2>Cloths</h2>
-        <div class="box-image" style="background-image: url('box1_image.jpg');"></div>
+        <h2>Mouse</h2>
+        <div class="box-image" style="background-image: url('mouse.webp');"></div>
         <p>See more</p>
         </div>
     </div>
     <div class="box2 box"><div class="box-content">
-        <h2>Health & Personal Care</h2>
-        <div class="box-image" style="background-image: url('box2_image.jpg');"></div>
+        <h2>Moniter</h2>
+        <div class="box-image" style="background-image: url('moniter.webp');"></div>
         <p>See more</p>
         </div></div>
     <div class="box3 box"><div class="box-content">
-        <h2>Furniture</h2>
-        <div class="box-image" style="background-image: url('box3_image.jpg');"></div>
+        <h2>Keyboard</h2>
+        <div class="box-image" style="background-image: url('keyboard.webp');"></div>
         <p>See more</p>
         </div></div>
     <div class="box4 box"><div class="box-content">
-        <h2>Electronics</h2>
-        <div class="box-image" style="background-image: url('box4_image.jpg');"></div>
+        <h2>CPU</h2>
+        <div class="box-image" style="background-image: url('cpu.webp');"></div>
         <p>See more</p>
         </div></div>
     <div class="box4 box"><div class="box-content">
-        <h2>Beauty Picks</h2>
-        <div class="box-image" style="background-image: url('box5_image.jpg');"></div>
+        <h2>Wifi Card</h2>
+        <div class="box-image" style="background-image: url('wifi\ card.webp');"></div>
         <p>See more</p>
         </div></div>
     <div class="box4 box"><div class="box-content">
-        <h2>Pet Care</h2>
-        <div class="box-image" style="background-image: url('box6_image.jpg');"></div>
+        <h2>Power Supply Unit</h2>
+        <div class="box-image" style="background-image: url('psu.webp');"></div>
         <p>See more</p>
         </div></div> 
     <div class="box4 box"><div class="box-content">
-        <h2>New arrivals in Toys</h2>
-        <div class="box-image" style="background-image: url('box7_image.jpg');"></div>
+        <h2>Pc cabinat</h2>
+        <div class="box-image" style="background-image: url('pc\ cabinat.webp');"></div>
         <p>See more</p>
         </div></div>
     <div class="box4 box"><div class="box-content">
-        <h2>Discover fashion trends</h2>
-        <div class="box-image" style="background-image: url('box8_image.jpg');"></div>
+        <h2>Graphic Card</h2>
+        <div class="box-image" style="background-image: url('graphic\ card.webp');"></div>
         <p>See more</p>
         </div></div>   
 </div>
@@ -134,14 +134,10 @@
             <p>Get to Know Us</p>
             <a>Careers</a>
             <a>Blog</a>
-            <a>About Amazon</a>
-            <a>Investor Relations</a>
-            <a>Amazon Devices</a>
-            <a>Amazon Science</a>
+            <a>About Gadget Guru</a>
         </ul>
         <ul>
             <p>Make Money with Us</p>
-            <a>Sell products on Amazon</a>
             <a>Sell on Amazon Business</a>
             <a>Advertise your Products</a>
             <a>Self-Publish with Us</a>
