--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <div class="hero-section">
     <div class="hero-message">
-        <p>You are on amazon.com.You can also shop on Amazon India for millions of products with fast local delivery.
+        <p>You are on amazon.com.You can also shop on Gadget GuruIndia for millions of products with fast local delivery.
             <a>Click here to go to amazon.in</a>
         </p>
     </div>
@@ -138,44 +138,32 @@
         </ul>
         <ul>
             <p>Make Money with Us</p>
-            <a>Sell on Amazon Business</a>
+            <a>Sell on Gadget GuruBusiness</a>
             <a>Advertise your Products</a>
             <a>Self-Publish with Us</a>
-            <a>Host an Amazon Hub</a>
+            <a>Host an Gadget GuruHub</a>
             <a>See More and Make</a>
         </ul>
         <ul>
-            <p>Amazon Payment Products</p>
-            <a>Amazon Business Card</a>
+            <p>Gadget GuruPayment Products</p>
+            <a>Gadget GuruBusiness Card</a>
             <a>Shop with Points</a>
             <a>Reload Your Balance</a>
-            <a>Amazon Currency Converter</a>
+            <a>Gadget GuruCurrency Converter</a>
         </ul>
         <ul>
             <p>Let Us Help You</p>
-            <a>Amazon and Covid-19</a>
+            <a>Gadget Guruand Covid-19</a>
             <a>Your Account</a>
             <a>Yours Orders</a>
             <a>Returns & Replacements</a>
-            <a>Amazon Assistant</a>
+            <a>Gadget GuruAssistant</a>
             <a>Help</a>
         </ul>
     </div>
-    <div class="foot-panel3">
-        <div class="logo"></div>
-        <div class="details">
-            <button><i class="fa-solid fa-comment"></i>&#160;English</button>
-            <button><i class="fa-solid fa-dollar-sign"></i>&#160;USD-U.S.Dollar</button>
-            <button><i class="fa-brands fa-font-awesome"></i>&#160;United States</button>
         </div>
     </div>
-    <div class="foot-panel4">
-        <div class="pages">
-            <a>Consitions of Use</a>
-            <a>Privacy Notice</a>
-            <a>Your Ads Privacy Choices</a>
-        </div>
-        <div class="copyright"><i class="fa-solid fa-copyright"></i>1996-2023, Amazon.com , Inc. or its affiliates</div>
+        <div class="copyright"><i class="fa-solid fa-copyright"></i></div>
     </div>
 </footer>
 </body>
