--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <button>Sign in</button>
     <p class ="customer">New customer?<a>Start here.</a></p>
 </div>
-<button id="chatbotButton" onclick="toggleChat()">Chat with Us!</button>
+<img id="chatbotLogo" src="chat-logo.png" alt="Chat with us" onclick="toggleChat()" width="50" height="50">
 <div id="chatContainer" class="chat-hidden">
   <iframe src="your-chatbot-url" width="300" height="400"></iframe>
 </div>
